# propval-sg

./: .env.example  .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  JD.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/: config.py
src/api/: main.py  schemas.py
src/avm/: predict.py  train.py
src/dashboard/: app.py
src/data/: db.py  features.py  ingest.py
src/forecast/: predict.py  train.py
tests/: test_api.py
